Add more --add-modules options for jck9
Signed-off-by: Simon Rushton <rushton@uk.ibm.com>